# cortex

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CITATION.cff  DEVELOPER_GUIDELINES.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  WHITEPAPER.md  debug_output.txt  debug_output_final.txt  debug_output_high_lambda.txt  debug_output_refinement.txt  debug_output_refinement_2.txt  debug_output_refinement_4.txt  debug_output_refinement_5.txt  debug_output_refinement_6.txt  debug_output_s7.txt  design_v1.2.0.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
cortex/: __init__.py
cortex/api/: client.py
cortex/core/: engine.py  hypothesis.py  inference.py
cortex_omega/: __init__.py
cortex_omega/api/: client.py  sklearn.py
cortex_omega/core/: __init__.py  config.py  critic.py  engine.py  errors.py  hypothesis.py  inference.py  kernel.py  learner.py  motif_library.py  rules.py  selectors.py  strategies.py  theorist.py  types.py  values.py
cortex_omega/io/: ingestor.py
data/golden/: family.json  xor.json
docs/: SPEC_kernel.md  examples.md  strategies.md  testing.md
examples/: 01_binary_classification.py  01_financial_fraud_detection.py  02_legal_exception_handling.py  02_relational_grandparent.py  03_realtime_visualization.py  03_robust_noisy_labels.py  04_strobe_light_protocol.py  05_cortex_aristotle.py  06_cortex_chain.py  07_david_vs_goliath.py  08_fraud_detection.py  09_advanced_conflict_resolution.py  10_core_capabilities_demo.py  10_killer_demo_prometheus.py  11_project_cassandra.py  12_recursive_arithmetic.py
tests/: test_add_rule.py  test_anti_unification.py  test_argument_generalization.py  test_aristotle.py  test_binary_relations.py  test_compression.py  test_confounder_invariance.py  test_confounder_trap.py  test_engine_polish.py  test_logic.py  test_mdl.py  test_meta_engineer.py  test_numeric_thresholds.py  test_parsing.py  test_pattern_learning_golden.py  test_properties.py  test_recursive_arithmetic.py  test_relational_grandparent.py  test_representation.py  test_robustness.py  test_rule_export.py  test_rule_stats.py  test_serialization.py  test_sklearn_wrapper.py  test_stability.py  test_stability_noisy_world.py  test_strict_mode.py  test_temporal_sequence.py  test_terms.py
tests/benchmarks/: test_benchmark_ilp.py
tests/stress_tests/: test_confounder_color.py  test_multi_exceptions.py  test_noisy_world.py
tests_stability/: test_david_vs_goliath.py  test_pattern_learning_regression.py  test_serialization_stability.py
