[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-omega"
version = "1.5.0"
description = "The Epistemic Inference Engine for Python. No prompts. Just logic."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["neuro-symbolic", "inductive-logic-programming", "explainable-ai", "rule-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
  {name = "Ivan Lozada", email = "ilozada@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/ivlozada/cortex-omega"
