[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-omega"
version = "2.1.1"
description = "A Neuro-Symbolic AI Kernel for logical induction and rule learning. No prompts. Just logic."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["neuro-symbolic", "inductive-logic-programming", "explainable-ai", "rule-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
  {name = "Ivan Lozada", email = "ilozada@example.com"}
]
dependencies = []

[tool.setuptools_scm]
write_to = "cortex_omega/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex_omega*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/ivlozada/cortex-omega"
